implementato recupero Dispositivi dal database e algoritmo path loss per la distanza

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
 
 
 
-        <input type="submit" value="Aggiungi il dispositivo" id="btn" onclick="addDevice()">
-        <input type="submit" value="elimina Dispositivi" id="elimina" onclick="removeDevice()">
+        <input type="submit" value="Aggiungi il dispositivo" id="btn" onclick="addDevice()" disabled>
+        <input type="submit" value="elimina Dispositivi" id="elimina" onclick="removeDevice()" disabled>
     </div>
 
 
@@ -73,7 +73,7 @@
         <p>Se non conosci le coordinate precise, premi il pulsante qui sotto perchè vengano generate
         </p>
         <div>
-            <input type="submit" value="Trova la posizione" id="findCoordinate" onclick="getLocation()">
+            <input type="submit" value="Trova la posizione" id="findCoordinate" onclick="getLocation()" disabled>
         </div>
     </div>
     </div>
