--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <script src="https://leaflet.github.io/Leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
     <script rel="Scripts" type="text/javascript" src="./static/function.js"></script>
     <script rel="Images" type="image" src="static/redMarker.png"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body onload="connect()">
