--- a/static/style.css
+++ b/static/style.css
@@ -28,6 +28,7 @@ body{
     width: 29%;
     height: 30%;
     position: absolute;
+    overflow: auto;
 }
 #map { 
      width: 70%;
@@ -38,16 +39,7 @@ body{
  }
 
 
- .coordinate{
-   top: 53%;
-   background-color: #f2f2f2;
-   border-radius: 5px;
-   padding: 5px;
-   width: 29%;
-   margin: auto;
-   position: absolute;
-   text-align: center;
- }
+
 
  .dispositivi{
    width: 70%;
@@ -64,21 +56,22 @@ body{
   background-color: #f2f2f2;
   position: absolute;
   border-radius: 5px;
-  padding: 10px;
+  padding: 1px;
   width: 29%;
   height: 21%;
   text-align: center;
+  overflow: auto;
  }
 
  .trilaterazione{
   background-color: #f2f2f2;
   position: absolute;
   border-radius: 5px;
-  padding: 10px;
   width: 29%;
-  height: 29%;
-  top: 71%;
-  text-align: center;
+  height: 47%;
+  top: 53%;
   overflow: auto;
+  text-align: center;
  }
+ 
  
