--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
 
 <body onload="connect()">
     <div class="dispositivi">
-        <table id="tabellaDispositivi" style="width:100%; border:solid;">
+        <table id="tabellaDispositivi" class="table table-striped table-hover"
+            style="font-size:1.1vw; padding:2px; width: 100%;">
             <th>Nome</th>
             <th>Latitudine</th>
             <th>Longitudine</th>
@@ -41,55 +42,58 @@
         <div id="form">
             <div class="input-group input-group-sm mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width:90px; text-align:center;">Nome</span>
+                    <span class="input-group-text" id="inputGroup-sizing-sm"
+                        style="width:90px; text-align:center;">Nome</span>
                 </div>
-                <input id="nome" type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+                <input id="nome" type="text" placeholder="es. Raspberry PI n2" class="form-control" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
             </div>
             <div class="input-group input-group-sm mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width:90px; text-align:center;">Latitudine</span>
+                    <span class="input-group-text" id="inputGroup-sizing-sm"
+                        style="width:90px; text-align:center;">Latitudine</span>
                 </div>
-                <input id="lat" type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+                <input id="lat" type="text" placeholder="es. 45.3189489171" class="form-control" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
             </div>
             <div class="input-group input-group-sm mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width:90px; text-align:center;">Longitudine</span>
+                    <span class="input-group-text" id="inputGroup-sizing-sm"
+                        style="width:90px; text-align:center;">Longitudine</span>
                 </div>
-                <input id="lng" type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+                <input id="lng" type="text" placeholder="es. 10.23190318943" class="form-control" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
             </div>
         </div>
 
-        <input type="submit" value="Aggiungi dispositivo" class="btn btn-success" id="btn" onclick="addDevice()"
-            disabled>
-        <input type="submit" value="Elimina dispositivi" class="btn btn-danger" id="elimina" onclick="removeDevice()"
-            disabled>
+        <input type="submit" style="font-size:1.1vw" value="Aggiungi dispositivo" class="btn btn-success" id="btn"
+            onclick="addDevice()" disabled>
+        <input type="submit" style="font-size:1.1vw" value="Elimina dispositivi" class="btn btn-danger" id="elimina"
+            onclick="removeDevice()" disabled>
     </div>
 
     <div class="title">
-        <p style="font-size:2vw" class="font-weight-normal">Trilaterazione WiFi tramite l'utilizzo di raspberry PI</p>
-    </div>
+        <p style="font-size:1.5vw ">Trilaterazione Dispositivi WiFi</p>
+        <input type="submit" style="font-size:1.1vw" class="btn btn-success" style="padding: 2px;"
+            value="Trova la posizione" id="findCoordinate" onclick="getLocation()" disabled>
+        <p></p>
+        <div class="progress">
 
-    <div class="coordinate">
-        <p style="font-size:1.2vw">Se non conosci le coordinate precise, premi il pulsante qui sotto perchè vengano
-            generate
-        </p>
-        <div>
-            <input type="submit" class="btn btn-success" value="Trova la posizione" id="findCoordinate"
-                onclick="getLocation()" disabled>
+            <div id="PBar" class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                aria-valuemax="100" style="width:0%;">
+            </div>
         </div>
     </div>
 
+
     <div class="trilaterazione">
-        <table id="dispositiviTrilaterati" class="table">
-            <thead class="thead-dark">
-              <tr>
-                <th scope="col">MacAdr</th>
-                <th scope="col">Vendor</th>
-                <th scope="col">Lat</th>
-                <th scope="col">Lng</th>
-              </tr>
-            </thead>
-        </table>      
+        <table id="dispositiviTrilaterati" class="table table-striped table-hover"
+            style="font-size:1.1vw; padding:2px; width: 100%;">
+            <th>MacAdr</th>
+            <th>Vendor</th>
+            <th>Lat</th>
+            <th>Lng</th>
+        </table>
     </div>
 
 
@@ -104,8 +108,6 @@
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
     </script>
-
-
     </div>
 </body>
 
