eliminata checkbox indoor e  controllo tempo start scan

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
 
     <div class="title">
         <p style="font-size:1.5vw ">Trilaterazione Dispositivi WiFi</p>
-        <input type="submit" style="font-size:1.1vw" class="btn btn-success" style="padding: 2px;"
+        <input type="submit" style="font-size:1.1vw" class="btn btn-info" style="padding: 2px;"
             value="Trova la posizione" id="findCoordinate" onclick="getLocation()" disabled>
         <p></p>
         <div class="progress">
